# geometry-shapes

./: CMakeLists.txt  README.md  imgui.ini  light_direction.frag  light_direction.vert  shape.frag
include/glad/: glad.h
shaders/: lightning_gouraud.fs  lightning_gouraud.vs  lightning_pong.vs
src/: camera.h  main.cpp  material.h  math.h  shader.h  shape.cpp  shape.h
